<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".views.details.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppBarLayoutTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/dot_loading">

            <ImageView
                android:id="@+id/iv_mealThumbDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription"
                tools:src="@drawable/testing" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/shadow_bottom_to_top"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pb_loading_detail"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:indeterminate="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_categoryDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="16dp"
                            android:text="@string/category"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/tv_dotCatDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="16dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            tools:text="@string/dot_loading" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_countryDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="16dp"
                            android:text="@string/country"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/tv_dotCountryDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="16dp"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp"
                            tools:text="@string/dot_loading" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:drawableEnd="@drawable/ic_info"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/instructions"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="16dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/tv_dotInstructionDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    tools:text="@string/dot_loading" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="16dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:paddingStart="14dp"
                        android:paddingEnd="14dp"
                        android:text="@string/Ingredients"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/ingredient"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="16dp"
                                android:paddingEnd="16dp"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="16sp"
                                tools:text="@string/dot_loading" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_measureDetail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="16dp"
                                android:paddingEnd="16dp"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="16sp"
                                tools:text="measurement" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_youtube"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:text="@string/youtube"
                    app:backgroundTint="#EC2D2D"
                    app:icon="@drawable/ic_play" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_source"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="32dp"
                    android:layout_weight="1"
                    android:text="@string/source"
                    app:icon="@drawable/ic_link" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>